# CMakeProjectStruct

./: CMakeLists.txt  CMakeOptions.txt  ReadMe.md
examples/: CMakeLists.txt
examples/audio/: audio.cpp
examples/core/: core.cpp
examples/models/: models.cpp
